# restify

./: Cargo.toml  README.md  restify.toml
examples/todo/: Cargo.toml
examples/todo/src/: app.rs  main.rs
examples/todo/src/todo/: controller.rs  dto.rs  entities.rs  mod.rs  services.rs
restify/: Cargo.toml  LICENSE  README.md
restify-core/: Cargo.toml
restify-core/src/: controller.rs  lib.rs  module.rs
restify-core/src/axum/: mod.rs
restify-macros/: Cargo.toml
restify-macros/src/: attr_parsing.rs  config.rs  controller.rs  lib.rs  module.rs
restify-macros/src/injectable/: attr.rs  axum.rs  mod.rs
restify-macros/src/route/: mod.rs
restify-openapi/: Cargo.toml
restify-openapi/src/: api_component.rs  definition_holder.rs  error_component.rs  lib.rs  path_item_definition.rs  simple.rs
restify-openapi/src/axum/routing/: method_filter.rs  method_routing.rs  mod.rs
restify-openapi/src/models/: components.rs  mod.rs  paths.rs  tag.rs
restify/src/: lib.rs
