[package]
name = "restify-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", default-features = false, features = ["net"] }
[features]
axum = []
