[package]
name = "restify-core"
version = "0.0.3"
edition = "2021"
authors.workspace = true
description = "STILL WIP"

homepage = "https://github.com/coders-collab-org/restify"
repository = "https://github.com/coders-collab-org/restify"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1", default-features = false, features = ["net"] }
[features]
axum = []
