[package]
name = "restify-openapi"
version = "0.0.0"
edition = "2021"
authors.workspace = true
homepage = "https://github.com/coders-collab-org/restify"
repository = "https://github.com/coders-collab-org/restify"

[dependencies]
schemars = { package = "apistos-schemars", version = "0.8", features = [
  "chrono",
  "uuid1",
  "url",
  "rust_decimal",
] }
serde = "1"
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
axum = { version = "0.7", optional = true }
tower-service = { version = "0.3", optional = true }
tower-layer = { version = "0.3", optional = true }
regex = "1"
once_cell = "1"
md5 = "0.7"

[dev-dependencies]
assert-json-diff = "2.0"


[features]
axum = ["dep:axum", "dep:tower-service", "dep:tower-layer"]
