[package]
name = "restify"
edition = "2021"
version = "0.0.0"
authors.workspace = true

[dependencies]
restify-macros = { path = "../restify-macros", default-features = false, optional = true }
restify-core = { path = "../restify-core", default-features = false }
restify-openapi = { path = "../restify-openapi", default-features = false, optional = true }

[features]
default = ["macros"]
axum = ["restify-macros?/axum", "restify-core/axum", "restify-openapi?/axum"]
macros = ["dep:restify-macros"]
openapi = ["dep:restify-openapi"]
