[package]
name = "restify"
edition = "2021"
version = "0.0.2"
authors.workspace = true
homepage = "https://github.com/coders-collab-org/restify"
repository = "https://github.com/coders-collab-org/restify"
license = "MIT"
description = "STILL WIP"

[dependencies]
restify-macros = { path = "../restify-macros", version = "0.0.2", default-features = false, optional = true }
restify-core = { path = "../restify-core", version = "0.0.2", default-features = false }
restify-openapi = { path = "../restify-openapi", version = "0.0.1", default-features = false, optional = true }

[features]
default = ["macros"]
axum = ["restify-macros?/axum", "restify-core/axum", "restify-openapi?/axum"]
macros = ["dep:restify-macros"]
openapi = ["dep:restify-openapi"]
