[package]
name = "todo"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
restify = { path = "../../restify", features = ["axum"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
